@@ -1,7 +1,17 @@
+2007-03-10  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>
+
+	* src/scanner.l (comment_input): Translate EOF to LEXEOF in this
+	case, too.
+	(input, noncommentinput): Spell out LEXEOF instead of a magic
+	number 0.
+
 2007-02-09  Neil Horman		   <nhorman@tuxdriver.com>
 	* doc/xcscope.1: Added man page for xcscope utility in contrib
 
 2007-01-07  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>
+
+	* src/fscanner.l: Avoid a -Wunused warning by disabling the
+	yy_topstate() function.
 
 	* README: Add a warning about the intended user audience not
 	including superusers or anonymous ones.
